force-app/main/default/objects/SettlementLineItem__c/fields/PremiumNoteNo_fm__c.field-meta.xml
<CustomField>
    <fullName>PremiumNoteNo_fm__c</fullName>
    <formula>IF(TEXT(ClosingOrign__c) = &apos;Placement&apos; , HYPERLINK(&apos;/&apos;+ Id, RefReinsuranceDetail__r.LKRefNo__c &amp; &apos;-&apos; &amp; &apos;P&apos; &amp; &apos;-&apos; &amp; Right(Text(RefReinsuranceDetail__r.RefPlacement__r.TransactionSeq__c + 100) ,2) &amp; &apos;-&apos; &amp; Right(TEXT (PremiumNoteSeqNo__c + 1000) , 3) &amp; IF(RefReinsuranceDetail__r.Instal__c = null , &apos;&apos; , Right(Text(IF(RefReinsuranceDetail__r.Instal__c = 0 , 1 , RefReinsuranceDetail__r.Instal__c ) + 1000) , 3 ) ) ) , &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Note No.</label>
    <type>Text</type>
</CustomField>