force-app/main/default/objects/SettlementLineItem__c/fields/PremiumNoteSeqNo__c.field-meta.xml
<CustomField>
    <fullName>PremiumNoteSeqNo__c</fullName>
    <label>Premium Note Seq(No)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>