force-app/main/default/objects/SettlementLineItem__c/fields/RealizedFXGainLoss__c.field-meta.xml
<CustomField>
    <fullName>RealizedFXGainLoss__c</fullName>
    <formula>IF(
    NOT(ISBLANK(SettlementDate__c)),
    BLANKVALUE(SettlementAmountSLI__c, 0) * BLANKVALUE(FXRateSettlementAccounting__c, 0),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realized FX Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>