force-app/main/default/objects/SettlementLineItem__c/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <label>(M)Received Date</label>
    <type>Date</type>
</CustomField>