force-app/main/default/objects/SettlementLineItem__c/fields/ReconcileNo__c.field-meta.xml
<CustomField>
    <fullName>ReconcileNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconcile No.</label>
    <referenceTo>Reconciliation__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>