force-app/main/default/objects/SettlementLineItem__c/fields/ReconStatus__c.field-meta.xml
<CustomField>
    <fullName>ReconStatus__c</fullName>
    <description>정산 상태</description>
    <label>Recon Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>