force-app/main/default/objects/SettlementLineItem__c/fields/ReconType__c.field-meta.xml
<CustomField>
    <fullName>ReconType__c</fullName>
    <label>Recon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Offset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>