force-app/main/default/objects/SettlementLineItem__c/fields/RefClaim__c.field-meta.xml
<CustomField>
    <fullName>RefClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>