force-app/main/default/objects/SettlementLineItem__c/fields/RefClaimAllocation__c.field-meta.xml
<CustomField>
    <fullName>RefClaimAllocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Claim Allocation</label>
    <referenceTo>CLM_Allocation__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>