force-app/main/default/objects/SettlementLineItem__c/fields/RefInsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>RefInsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefInsurancePolicy</relationshipName>
    <type>Lookup</type>
</CustomField>