force-app/main/default/objects/SettlementLineItem__c/fields/RefPanel__c.field-meta.xml
<CustomField>
    <fullName>RefPanel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Panel</label>
    <referenceTo>OPP_Panel__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefPanel</relationshipName>
    <type>Lookup</type>
</CustomField>