force-app/main/default/objects/SettlementLineItem__c/fields/RefParticipant__c.field-meta.xml
<CustomField>
    <fullName>RefParticipant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Participant</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefParticipant</relationshipName>
    <type>Lookup</type>
</CustomField>