force-app/main/default/objects/SettlementLineItem__c/fields/RefPolicyDetail__c.field-meta.xml
<CustomField>
    <fullName>RefPolicyDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Policy_Detail</label>
    <referenceTo>InsurancePolicyLineItem__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefPolicyDetail</relationshipName>
    <type>Lookup</type>
</CustomField>