force-app/main/default/objects/SettlementLineItem__c/fields/RefReinsurance__c.field-meta.xml
<CustomField>
    <fullName>RefReinsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefReinsurance</relationshipName>
    <type>Lookup</type>
</CustomField>