force-app/main/default/objects/SettlementLineItem__c/fields/RefReinsuranceDetail__c.field-meta.xml
<CustomField>
    <fullName>RefReinsuranceDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Placement_Detail</label>
    <referenceTo>PlacementLineItem__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefReinsuranceDetail</relationshipName>
    <type>Lookup</type>
</CustomField>