force-app/main/default/objects/SettlementLineItem__c/fields/RefSettlement__c.field-meta.xml
<CustomField>
    <fullName>RefSettlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>정산</description>
    <label>Ref. Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_RefSettlement</relationshipName>
    <type>Lookup</type>
</CustomField>