force-app/main/default/objects/SettlementLineItem__c/fields/RemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceDate__c</fullName>
    <description>입출금 발생일자</description>
    <label>Remittance Date</label>
    <type>Date</type>
</CustomField>