force-app/main/default/objects/SettlementLineItem__c/fields/RemittanceOnHold__c.field-meta.xml
<CustomField>
    <fullName>RemittanceOnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remittance On Hold</label>
    <type>Checkbox</type>
</CustomField>