force-app/main/default/objects/SettlementLineItem__c/fields/Sales_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Currency__c</fullName>
    <label>SalesCurrency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>