force-app/main/default/objects/SettlementLineItem__c/fields/SendtoCloseDate__c.field-meta.xml
<CustomField>
    <fullName>SendtoCloseDate__c</fullName>
    <label>Send to Close Date</label>
    <type>Date</type>
</CustomField>