force-app/main/default/objects/SettlementLineItem__c/fields/SetoffTarget__c.field-meta.xml
<CustomField>
    <fullName>SetoffTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>상계대상</description>
    <label>Setoff Target</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_SetoffTarget</relationshipName>
    <type>Lookup</type>
</CustomField>