force-app/main/default/objects/SettlementLineItem__c/fields/SettlementAmountSLI__c.field-meta.xml
<CustomField>
    <fullName>SettlementAmountSLI__c</fullName>
    <label>Settlement Amount (SLI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>