force-app/main/default/objects/SettlementLineItem__c/fields/SettlementCounterparty__c.field-meta.xml
<CustomField>
    <fullName>SettlementCounterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>관련 거래처</description>
    <label>(M)Settlement Counterparty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlement Line Items (Settlement Counterparty)</relationshipLabel>
    <relationshipName>SettlementLineItems_SettlementCounterpar</relationshipName>
    <type>Lookup</type>
</CustomField>