force-app/main/default/objects/SettlementLineItem__c/fields/SettlementDateCounterparty__c.field-meta.xml
<CustomField>
    <fullName>SettlementDateCounterparty__c</fullName>
    <label>Settlement Date(Counterparty)</label>
    <type>Date</type>
</CustomField>