force-app/main/default/objects/SettlementLineItem__c/fields/SettlementStatus__c.field-meta.xml
<CustomField>
    <fullName>SettlementStatus__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not-Available</fullName>
                <default>true</default>
                <label>Not-Available</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>