force-app/main/default/objects/SettlementLineItem__c/fields/SOCSeq__c.field-meta.xml
<CustomField>
    <fullName>SOCSeq__c</fullName>
    <formula>RefClaim__r.SOCPLASeq__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOC Seq</label>
    <type>Text</type>
</CustomField>