force-app/main/default/objects/SettlementLineItem__c/fields/SplitKey__c.field-meta.xml
<CustomField>
    <fullName>SplitKey__c</fullName>
    <label>Split Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>