force-app/main/default/objects/SettlementLineItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>STC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
            <value>
                <fullName>Reversing</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>