force-app/main/default/objects/SettlementLineItem__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>Text(Owner:User.OrgLv5_del__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>