force-app/main/default/objects/SettlementLineItem__c/fields/TotalClearedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalClearedAmount__c</fullName>
    <label>(M)Total Cleared Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>