force-app/main/default/objects/SettlementLineItem__c/fields/TotalClearedAmountKRW__c.field-meta.xml
<CustomField>
    <fullName>TotalClearedAmountKRW__c</fullName>
    <label>(M)Total Cleared Amount(KRW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>