force-app/main/default/objects/SettlementLineItem__c/fields/TPB__c.field-meta.xml
<CustomField>
    <fullName>TPB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(M)TPB</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlement Line Items (TPB)</relationshipLabel>
    <relationshipName>SettlementLineItems_TPB</relationshipName>
    <type>Lookup</type>
</CustomField>