force-app/main/default/objects/SettlementLineItem__c/fields/Type_fm__c.field-meta.xml
<CustomField>
    <fullName>Type_fm__c</fullName>
    <formula>Text( RefReinsurance__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>