force-app/main/default/objects/SettlementLineItem__c/fields/UnrealizedFXGainLoss__c.field-meta.xml
<CustomField>
    <fullName>UnrealizedFXGainLoss__c</fullName>
    <formula>IF(
    NOT(ISBLANK(EvaluationDate__c)),
    BLANKVALUE(AMTSales__c, 0) - BLANKVALUE(AmtAPAR__c, 0),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unrealized FX Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>