force-app/main/default/objects/SettlementLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClosingOrign__c</columns>
    <columns>ClosingType__c</columns>
    <columns>OriginCurrency__c</columns>
    <columns>AccountName__c</columns>
    <columns>OriginAmount__c</columns>
    <columns>AccountingDate__c</columns>
    <columns>AccountingFXRate__c</columns>
    <columns>SettlementDate__c</columns>
    <columns>AMTSales__c</columns>
    <columns>PremiumNoteNo_fm__c</columns>
    <columns>Status__c</columns>
    <columns>SettlementStatus__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>